--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   4. Pindahkan folder xamps ke dalam htdocs
   5. Buka browser kemudian ketikkan URL : http://localhost/nmfolderdihtdocs/wp-admin
   6. Pilih bahasa tekan tombol Continue
-  7. Menyiapkan database Klik ayo. 
+  7. Menyiapkan database, Klik ayo. 
   8. Mengisi Database dengan klik di mysQl admin.
   9. Buat database
   10. isi koneksi database name basis data : diisi dengan nama database
