--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
   7. Menyiapkan database, Klik ayo. 
   8. Mengisi Database dengan klik di mysQl admin.
   9. Buat database
-  10. isi koneksi database name basis data : diisi dengan nama database
-  Nama pengguna: diisi dengan root.
-  Sandi :  dikosongkan. Kemudian klik tombol Submit.
-  11. Masukkan detail mengenai wordpress, Nama situs : judul utama dari website Nama pengguna : username yang akan digunakan untuk login ke dashboard WordPress
-  Sandi : password yang akan digunakan untuk login ke dashboard WordPress. Kemudian klik install wordpress
+  10. isi koneksi database 
+    name basis data : diisi dengan nama database
+    Nama pengguna: diisi dengan root.
+    Sandi :  dikosongkan. Kemudian klik tombol Submit.
+  11. Masukkan detail mengenai wordpress, 
+    Nama situs : judul utama dari website 
+    Nama pengguna : username yang akan digunakan untuk login ke dashboard WordPress
+    Sandi : password yang akan digunakan untuk login ke dashboard WordPress. Kemudian klik install wordpress
   12. Jika proses instalasi sudah berhasil,  login ke dashboard WordPress dengan cara klik tombol Login dan masukkan username dan password yang dibuat sebelumnya.
     Cara Backup
   1. Copy file dalam folder htdocs pindahkan ke dalam folder yang kita buat. Kemudian klik mysQl admin klik exsport pilih costum dan nama database yg telah dibuat 
