--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <ol>
 <li>kesimpulan pertemuan 1
     Cara install wordpress.org
+    pastikan aktifkan phpmyadmin
   1. Buka alamat wordpress.org kemudian pilih tombol unduh wordoress.5.8.1
   2. Buka file kemudian ekstrak
   3. Rename folder yang telah di ekstrak (tanpaspasi)
