--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   7. Menyiapkan database, Klik ayo. 
   8. Mengisi Database dengan membuka xampp lalu klik di mysQl admin.
   9. Buat database
-  10. isi koneksi database 
+  10. Isi koneksi database 
       name basis data : diisi dengan nama database
       Nama pengguna: diisi dengan root.
       Sandi :  dikosongkan. Kemudian klik tombol Submit.
