--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<ol>
-<li>pertemuan 1
-    Nama     : Mutia Amirah Rahim
+<html>
+    <head><title>pertemuan 1</title>
+    </head>
+    <body>
+    Nama     : Mutia Amirah Rahim<br/>
     NIM      : 1922500116
     Kelompok : SI5A
     Tugas Rekayasa Web dengan Materi Install WordPress, Backup, dan Restore WordPress
