--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     </head>
     <body>
     Nama     : Mutia Amirah Rahim<br/>
-    NIM      : 1922500116
-    Kelompok : SI5A
-    Tugas Rekayasa Web dengan Materi Install WordPress, Backup, dan Restore WordPress
+    NIM      : 1922500116<br/>
+    Kelompok : SI5A<br/>
+    Tugas Rekayasa Web dengan Materi Install WordPress, Backup, dan Restore WordPress<br/>
     
-    Cara INSTALL wordpress.org
+    Cara INSTALL wordpress.org<br/>
     pastikan aktifkan phpmyadmin
   1. Buka alamat wordpress.org kemudian pilih tombol unduh wordoress.5.8.1
   2. Buka file kemudian ekstrak
