--- a/index.html
+++ b/index.html
@@ -41,3 +41,7 @@
   2. Import file sql, kemudian pilih file,  dan pilih set format (SQL)<br/>
   3. klik go<br/>
 <br/>
+<html>
+    <head><title>pertemuan 1</title>
+    </head>
+    <body>
