--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     Tugas Rekayasa Web dengan Materi Install WordPress, Backup, dan Restore WordPress<br/>
     <br/>
     Cara INSTALL wordpress.org<br/>
-    pastikan aktifkan phpmyadmin<br/>
+    Pastikan aktifkan phpmyadmin<br/>
   1. Buka alamat wordpress.org kemudian pilih tombol unduh wordoress.5.8.1<br/>
   2. Buka file kemudian ekstrak<br/>
   3. Rename folder yang telah di ekstrak CONTOH si5a2122o (tanpaspasi)<br/>
@@ -19,7 +19,7 @@
   8. Mengisi Database dengan membuka xampp lalu klik di mysQl admin.<br/>
   9. Buat database<br/>
   10. Isi koneksi database <br/>
-      name basis data : diisi dengan nama database<br/>
+      <br>name basis data : diisi dengan nama database<br/>
       Nama pengguna: diisi dengan root.<br/>
       Sandi :  dikosongkan. Kemudian klik tombol Submit.<br/>
   11. Masukkan detail mengenai wordpress, <br/>
