--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <html>
-    <head><title>pertemuan 1</title>
+    <head><title></title>
     </head>
     <body>
+        Pertemuan 1
     Nama     : Mutia Amirah Rahim<br/>
     NIM      : 1922500116<br/>
     Kelompok : SI5A<br/>
     Tugas Rekayasa Web dengan Materi Install WordPress, Backup, dan Restore WordPress<br/>
     <br/>
-    Cara INSTALL wordpress.org<br/>
+    CARA INSTALL wordpress.org<br/>
     Pastikan aktifkan phpmyadmin<br/>
   1. Buka alamat wordpress.org kemudian pilih tombol unduh wordoress.5.8.1<br/>
   2. Buka file kemudian ekstrak<br/>
@@ -19,7 +20,7 @@
   8. Mengisi Database dengan membuka xampp lalu klik di mysQl admin.<br/>
   9. Buat database<br/>
   10. Isi koneksi database <br/>
-      <br>name basis data : diisi dengan nama database<br/>
+      Name basis data : diisi dengan nama database<br/>
       Nama pengguna: diisi dengan root.<br/>
       Sandi :  dikosongkan. Kemudian klik tombol Submit.<br/>
   11. Masukkan detail mengenai wordpress, <br/>
@@ -36,7 +37,7 @@
     (db_si5a2122o) kemudian klik go<br/>
   4. Masukkan file- file yang telah didowload ke dalam folder yang telah dibuat dan compress jadi satu<br/>
     <br/>
-    RESTORE aplikasi wordpress<br/>
+    RESTORE APLIKASI WordPress<br/>
   1. Extract folder kemudian masukkan folder yang telah diextract ke dalam htdocs<br/>
   2. Import file sql, kemudian pilih file,  dan pilih set format (SQL)<br/>
   3. klik go<br/>
