--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
-    <head><title></title>
+    <head><title>Pertemuan 1</title>
     </head>
     <body>
-        Pertemuan 1
     Nama     : Mutia Amirah Rahim<br/>
     NIM      : 1922500116<br/>
     Kelompok : SI5A<br/>
