--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <head><title>Pertemuan 1</title>
+    <head><title></title>
     </head>
     <body>
     Nama     : Mutia Amirah Rahim<br/>
@@ -11,12 +11,12 @@
     Pastikan aktifkan phpmyadmin<br/>
   1. Buka alamat wordpress.org kemudian pilih tombol unduh wordoress.5.8.1<br/>
   2. Buka file kemudian ekstrak<br/>
-  3. Rename folder yang telah di ekstrak CONTOH si5a2122o (tanpaspasi)<br/>
+  3. Rename folder yang telah di ekstrak Contoh : si5a2122o (tanpaspasi)<br/>
   4. Pindahkan folder xamps ke dalam folder htdocs<br/>
   5. Buka browser kemudian ketikkan URL : http://localhost/nmfolderdihtdocs/wp-admin<br/>
   6. Pilih bahasa tekan tombol Continue<br/>
   7. Menyiapkan database, Klik ayo. <br/>
-  8. Mengisi Database dengan membuka xampp lalu klik di mysQl admin.<br/>
+  8. Mengisi Database dengan membuka xampp lalu klik di MySQL admin.<br/>
   9. Buat database<br/>
   10. Isi koneksi database <br/>
       Name basis data : diisi dengan nama database<br/>
