--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   8. Mengisi Database dengan membuka xampp lalu klik di MySQL admin.<br/>
   9. Buat database<br/>
   10. Isi koneksi database <br/>
-      Name basis data : diisi dengan nama database<br/>
-      Nama pengguna: diisi dengan root.<br/>
+     <p align="center">Name basis data : diisi dengan nama database</p><br/>
+        <p align="center"> <Nama pengguna: diisi dengan root</p><br/>
       Sandi :  dikosongkan. Kemudian klik tombol Submit.<br/>
   11. Masukkan detail mengenai wordpress, <br/>
       Nama situs : judul utama dari website <br/>
