--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     </head>
     <body>
         <p><b>Nama     : Mutia Amirah Rahim<br/></p>
-    NIM      : 1922500116<br/>
+            <ol>
+                <li>NIM      : 1922500116</li>
     Kelompok : SI5A<br/>
     Tugas Rekayasa Web dengan Materi Install WordPress, Backup, dan Restore WordPress<br/>
     <br/>
