--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
     <head><title></title>
     </head>
     <body>
-        <p><b>Nama     : Mutia Amirah Rahim<br/></p>
-            <ol>
-                <li>NIM      : 1922500116</li>
+        Nama     : Mutia Amirah Rahim</br>
+        NIM      : 1922500116</br>
     Kelompok : SI5A<br/>
     Tugas Rekayasa Web dengan Materi Install WordPress, Backup, dan Restore WordPress<br/>
     <br/>
