--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <br/>
     CARA INSTALL wordpress.org<br/>
     Pastikan aktifkan phpmyadmin<br/>
+<ol type="1">
   1. Buka alamat wordpress.org kemudian pilih tombol unduh wordoress.5.8.1<br/>
   2. Buka file kemudian ekstrak<br/>
   3. Rename folder yang telah di ekstrak Contoh : si5a2122o (tanpaspasi)<br/>
