--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
     <head><title></title>
     </head>
     <body>
-        <h4>Cggg</h4>
-        <ol>
-            <li> Nama     : Mutia Amirah Rahim</li>
+    Nama     : Mutia Amirah Rahim</br>
     NIM      : 1922500116</br>
     Kelompok : SI5A<br/>
     Tugas Rekayasa Web dengan Materi Install WordPress, Backup, dan Restore WordPress<br/>
     <br/>
-<ol type="1">
+
     CARA INSTALL wordpress.org<br/>
     Pastikan aktifkan phpmyadmin<br/>
   1. Buka alamat wordpress.org kemudian pilih tombol unduh wordoress.5.8.1<br/>
