--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     Tugas Rekayasa Web dengan Materi Install WordPress, Backup, dan Restore WordPress<br/>
     <br/>
 
-    CARA INSTALL wordpress.org<br/>
-    Pastikan aktifkan phpmyadmin<br/>
+    CARA INSTALL WordPress.org<br/>
   1. Buka alamat wordpress.org kemudian pilih tombol unduh wordoress.5.8.1<br/>
   2. Buka file kemudian ekstrak<br/>
   3. Rename folder yang telah di ekstrak Contoh : si5a2122o (tanpaspasi)<br/>
@@ -31,13 +30,13 @@
       dengan cara klik tombol Login dan masukkan username dan password yang dibuat sebelumnya.<br/>
     <br/>
     CARA BACKUP<br/>
-  1. Buat satu folder<br/>
+  1. Buat satu folder baru<br/>
   2. Copy file dalam folder htdocs (si5a2122o), pindahkan ke dalam folder yang kita buat tadi.<br/>
   3. Kemudian dari phpMyadmin klik exsport pilih costum dan nama database yg telah dibuat tadi<br/>
     (db_si5a2122o) kemudian klik go<br/>
   4. Masukkan file- file yang telah didowload ke dalam folder yang telah dibuat dan compress jadi satu<br/>
     <br/>
-    RESTORE APLIKASI WordPress<br/>
+    RESTORE WordPress<br/>
   1. Extract folder kemudian masukkan folder yang telah diextract ke dalam htdocs<br/>
   2. Import file sql, kemudian pilih file,  dan pilih set format (SQL)<br/>
   3. klik go<br/>
