--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   4. Masukkan file- file yang telah didowload ke dalam folder yang telah dibuat dan compress jadi satu<br/>
     <br/>
     RESTORE WordPress<br/>
-  1. Extract folder kemudian masukkan folder yang telah diextract ke dalam htdocs<br/>
+  1. Extract file yang telah di backup kemudian masukkan folder yang telah diextract ke dalam htdocs<br/>
   2. Import file sql, kemudian pilih file,  dan pilih set format (SQL)<br/>
   3. klik go<br/>
 <br/>
