--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     RESTORE WordPress<br/>
   1. Extract file yang telah di backup kemudian masukkan folder yang telah diextract ke dalam htdocs<br/>
   2. Import file sql, kemudian pilih file,  dan pilih set format (SQL)<br/>
-  3. klik go
+  3. klik go<br/>
   4. Jika sudah berwarna hijau file SQL telah ada  dan berhasil di restore
 <br/>
 <br/>
